Fix header on mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -114,12 +114,6 @@ header {
     margin-bottom: 16px;
 }
 
-@media (max-width: 1200px) {
-    header {
-        background-color: white;
-    }
-}
-
 nav {
     display: flex;
     flex-direction: row;
